# internet_shop

./: .env.sample  README.md  blog_data.json  catalog.json  catalog_data.json  pyproject.toml  requirements.txt
blog/: admin.py  models.py  urls.py  views.py
blog/migrations/: 0001_initial.py
blog/templates/blog/: article_confirm_delete.html  article_detail.html  article_form.html  article_list.html
catalog/: admin.py  forms.py  models.py  services.py  urls.py  views.py
catalog/management/commands/: fill_db.py
catalog/migrations/: 0001_initial.py  0002_alter_product_changed_at_alter_product_created_at.py  0003_alter_product_changed_at_alter_product_created_at.py  0003_category_created_at_alter_product_changed_at_and_more.py  0004_message.py  0005_product_slug.py  0006_productversion.py  0007_alter_productversion_is_active.py  0008_product_author.py
catalog/templates/catalog/: base.html  category_list.html  contacts.html  home.html  index.html  product.html  product_confirm_delete.html  product_detail.html  product_form.html  product_list.html
catalog/templates/catalog/includes/: inc_catalog_info.html  inc_catalog_menu.html  inc_catalog_product_card.html  inc_catalog_product_card_bottom.html  inc_catalog_product_card_top.html  inc_menu.html  inc_title.html
catalog/templatetags/: my_tags.py
config/: settings.py  urls.py
users/: admin.py  forms.py  models.py  urls.py  views.py
users/migrations/: 0001_initial.py  0002_user_verify_token_alter_user_is_active.py
users/templates/users/: login.html  user_form.html
