[tool.poetry]
name = "web-store"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "web_store"}]

[tool.poetry.dependencies]
python = "^3.9"
django = "^4.2.3"
pillow = "^10.0.0"
ipython = "^8.14.0"
psycopg2-binary = "^2.9.7"
pytils = "^0.4.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
